# FIFA-2026

./: .env.example  .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  main.yml
backend/: .dockerignore  .gcloudignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/config/: logging.py  settings.py
backend/core/: cache.py  dependencies.py  exceptions.py  middleware.py  security.py  types.py
backend/features/auth/: models.py  router.py  service.py
backend/features/crowd/: models.py  repository.py  router.py  service.py
backend/features/incidents/: models.py  repository.py  router.py  service.py
backend/features/navigation/: models.py  router.py  service.py
backend/features/pulse/: router.py
backend/features/simulation/: router.py
backend/features/sustainability/: router.py
backend/infrastructure/firestore/: client.py  repository.py
backend/intelligence/: gemini_client.py
backend/simulation/: engine.py
backend/tests/: __init__.py  conftest.py  test_core.py  test_intelligence.py
backend/tests/ai_evaluation/: test_ai_responses.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  test-bell.js
frontend/public/: manifest.json  sw.js  workbox-3a6b12a7.js  worker--ovZVGjcLgC_rcM1I0a5P.js
frontend/tests/: a11y.spec.ts  assistant.spec.ts  dashboard.spec.ts  login.spec.ts
frontend/worker/: index.ts
infrastructure/: deploy.sh  main.tf  terraform.tfvars
infrastructure/terraform/: main.tf  outputs.tf
(+21 files in other folders)
